<resources>
    <string name="app_name">ApplicationClient</string>
    <string name="landing_page_string">Welcome to Twitch Flix</string>
    <string name="input_user_name">Email</string>
    <string name="input_password">Password</string>
    <string name="attempt_login">Login</string>
    <string name="server_client_id">793164474933-38kpib7rpupdmll3g81uncpul96gbmj2.apps.googleusercontent.com</string>
    <string name="register">Register</string>
    <string name="register_form">Register form</string>
    <string name="input_user_email">Email</string>
    <string name="input_first_name">First Name</string>
    <string name="input_last_name">Last Name</string>
    <string name="register_button">Register</string>
    <string name="email_not_valid">The email you have provided is not valid</string>
    <string name="account_already_exists">Account with that email already exists</string>
    <string name="title_activity_landing_page_n">LandingPageN</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="login_not_valid">The login you provided is not valid</string>
    <string name="own_channel">My channel</string>
    <string name="start_stream">Start stream</string>
    <string name="logout">Logout</string>
    <string name="title_nav_bar_2">Account Settings</string>
    <string name="account_settings">Settings</string>
    <string name="stream_options">Stream Options</string>
    <string name="stream_title">Stream title:</string>
    <string name="stream_title_write">Stream title</string>
    <string name="stream_desc">Stream Description:</string>
    <string name="description">Stream description</string>
    <string name="start_stream_button">Start Stream</string>
    <string name="title_activity_account_settings">AccountSettings</string>
    <string name="changepassword">Change password</string>
    <string name="old_password">Old password</string>
    <string name="changefirstname">Change First Name</string>
    <string name="new_first_name">New first name</string>
    <string name="change_last_name">Change Last Name</string>
    <string name="new_last_name">New last name</string>
    <string name="update_account_settings">Update Account</string>
    <string name="action_search">Search</string>
    <string name="video_thumbnail">Video thumbnail</string>
    <string name="go_back">Return</string>
    <string name="delete_video">Delete Video</string>
    <string name="edit_video">Edit video</string>
    <string name="delete_video_certain">Video Deletion</string>
    <string name="delete_video_certain_body">Are you sure you want to delete this video?</string>
    <string name="delete_video_yes">Delete video</string>
    <string name="delete_video_no">Cancel</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="finish_video_editing">Edit Video</string>
    <string name="choose_photo">Choose</string>
    <string name="take_photo">Take Photo</string>
    <string name="save_changes">Save</string>
    <string name="saving_user_photo">Uploading photo...</string>
    <string name="upload_new_photo">Upload photo</string>
    <string name="permission_not_granted">Without the camera permission, the app will not function correctly</string>
</resources>
