<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register_screen"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterActivity">

    <TextView
        android:id="@+id/registertextview"
        android:layout_width="190dp"
        android:layout_height="60dp"
        android:fontFamily="sans-serif-smallcaps"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="@string/register_form"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/inputemail"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/input_user_email" />

    <EditText
        android:id="@+id/inputfirstname"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/input_first_name" />

    <EditText
        android:id="@+id/inputlastname"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/input_last_name" />

    <EditText
        android:id="@+id/inputpassword"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/input_password"/>

    <Button
        android:id="@+id/attemptregister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/register_button"/>

</LinearLayout>